tests/NormalTests/paczka2/big_fuzzy/59289366.err
Error in line 3: d8he7uFyQg S159 92,2
Error in line 7: d8he7uFyQg S355 27,4
Error in line 9: giaIkMn A44 88,1
Error in line 20: XEM A44 83,54
Error in line 16: XEM S171 37,2
Error in line 30: HwbY S1Y9 68,8
Error in line 39: IN1dqo0H S171 68,2
Error in line 37: giaIkMn S159 78,9
Error in line 48: giaIkMn A44 44,6
Error in line 53: giaIkMn S355 -1,6
Error in line 51: S171 S171 88,9
Error in line 55: S171 S159 83,1
Error in line 59: AlhxVOReh A44 47,4
Error in line 60: AlhxVOReh S171 32,5
Error in line 54: d8he7uFyQg A44 6,3
Error in line 62: d8he7uFyQg S159 67,1
Error in line 78: AlhxVOReh S159 82,4
Error in line 87: S171 S355 70,1
Error in line 99: AlhxVOReh A44 65,2
Error in line 117: S171 S159 14,0
Error in line 120: d8he7uFyQg A44 50,4
Error in line 124: HwbY A44 24,3
Error in line 118: S171 S171 74,1
Error in line 133: S171 S159 -2,5
Error in line 128: XEM A44 48,7
Error in line 131: S171 S159 36,7
Error in line 138: IN1dqo0H S159 56,7
Error in line 143: AlhxVOReh S355 60,9
Error in line 141: giaIkMn A44 18,0
Error in line 130: HwbY S355 22,9
Error in line 146: AlhxVOReh A44 0,8
Error in line 153: AlhxVOReh S355 65,6
Error in line 152: S171 S159 3,8
Error in line 148: HwbY A44 56,3
Error in line 159: S171 S171 68,9
Error in line 163: S171 A44 19,4
Error in line 171: d8he7uFyQg A44 20,7
Error in line 169: S171 S159 48,0
Error in line 181: HwbY A44 14,0
Error in line 182: HwbY S159 30,0
Error in line 175: giaIkMn S355 59,9
Error in line 194: AlhxVOReh S171 72,5
Error in line 177: IN1dqo0H A44 57,8
Error in line 200: d8he7uFyQg S159 31,3
Error in line 207: giaIkMn S171 162,9
